# motor_dealer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
dealer/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
dealer/management/commands/: create_dump_data_dealers.py
dealer/migrations/: 0001_initial.py
md_ui/: .env.example  Dockerfile  index.html  package-lock.json  package.json
md_ui/src/: App.jsx  Dealer.jsx  DealerList.jsx  Loader.jsx  SearchForm.jsx
